Añadiendo endpoints de pets y seguridad funcional